Fix mobile bug and Add icon mobile home page

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,6 +4,20 @@
     font-size: $text-font-size-desktop;
     margin: 0px;
 }
+
+.socials{
+    display: none;
+    width: 60%;
+    justify-content: space-evenly;
+    align-self: center;
+    margin: 60px 0px 10px 0px;
+    &--item{
+        font-size: 30px;
+        &:hover{
+          color: $links-color-main;
+        }
+    }
+  }
 .container {
     display: flex;
     flex-direction: column;
@@ -366,6 +380,9 @@
 }
 
 @media #{$tablet} {
+    .socials{
+        display: flex;
+    }
     .text {
         font-size: $text-font-size-mobile;
         margin: 0px;
@@ -524,6 +541,9 @@
     }
 }
 @media #{$mobile} {
+    .socials{
+        display: flex;
+    }
     .text {
         font-size: $text-font-size-mobile;
         margin: 0px;
